# MIA-Mitigation-in-Fed-Learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
mia_mitigation_in_fed_learning/: __init__.py  client_app.py  mia.py  server_app.py  task.py
models/WRN-40-10/: README.md
