# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mia-mitigation-in-fed-learning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "joshrlowe"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "mia_mitigation_in_fed_learning.server_app:app"
clientapp = "mia_mitigation_in_fed_learning.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 400
fraction-train = 0.75
local-epochs = 2
lr = 0.05
initial-weights-path = "final_model.pt"

# Model architecture
model-depth = 34
model-widen-factor = 10
model-num-classes = 100
drop-rate = 0.0

# Data augmentation
random-crop-padding = 4
random-erasing-probability = 0.5

# Data loading
batch-size = 128
num-workers = 4
test-split-size = 0.2
data-partition-seed = 42

# Training
label-smoothing = 0.1
momentum = 0.9
weight-decay = 0.0001
max-grad-norm = 1.0

# CIFAR-100 statistics
cifar-100-mean = "0.5071,0.4867,0.4409"
cifar-100-std = "0.2675,0.2565,0.2761"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.1

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
